# python-project-52

./: .coverage  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  coverage.xml  django.po  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-check.yml
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: settings.py  tests.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: label.json
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py
task_manager/static/css/: index.css
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: status.json
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0003_alter_status_created_at.py  0004_alter_status_name.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: task.json
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_created_at_alter_task_name_tasklabels_and_more.py  0003_alter_task_executor.py  0004_alter_task_author_alter_task_description_and_more.py  0005_alter_task_description_alter_task_executor_and_more.py  0006_alter_task_options_remove_task_label_task_labels_and_more.py
task_manager/templates/: index.html
task_manager/templates/labels/: create.html  delete.html  label_list.html  update.html
task_manager/templates/statuses/: create.html  delete.html  status_list.html  update.html
task_manager/templates/task_manager/: base.html  index.html
task_manager/templates/tasks/: create.html  delete.html  detail.html  task_list.html  update.html
task_manager/templates/users/: delete.html  index.html  login.html  register.html  update.html  user_list.html
task_manager/users/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/fixtures/: user.json
task_manager/users/migrations/: 0001_initial.py  0002_alter_myuser_created_at.py
