[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["qamaz <solgrini@yandex.ru>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
python-dotenv = "^0.20.0"
dj-database-url = "^0.5.0"
whitenoise = "^6.1.0"
psycopg2-binary = "^2.9.3"
django-bootstrap4 = "^22.1"
django-filter = "^22.1"
rollbar = "^0.16.3"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
black = "^22.8.0"
flake8 = "^5.0.4"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
