[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["qamaz <solgrini@yandex.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.2"
python-dotenv = "^0.19.2"
dj-database-url = "^0.5.0"
gunicorn = "^20.1.0"
whitenoise = "^6.0.0"
django-bootstrap4 = "^21.2"
django-filter = "^21.1"
rollbar = "^0.16.2"
psycopg2-binary = "^2.9.3"
django-cors-headers = "^3.11.0"
django-extensions = "^3.2.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.5"
coverage = "^6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
